Added checking hash against VT using the API.

--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,7 @@
 {
     "ServerPort" : 8080,
+    "UploadLimitMB" : 512,
     "UseVirusTotal" : true,
     "UploadVirusTotal" : true,
-    "VirusTotalApiKey" : "KEY"
+    "VirusTotalApiKey" : "lol"
 }
