--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,12 +2,12 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
 name: Go
-
+    
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["SecurityPipeline"]
+    types:
+      - completed
 
 jobs:
 
