--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,12 +2,12 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
 name: Go
-    
+
 on:
-  workflow_run:
-    workflows: ["SecurityPipeline"]
-    types:
-      - completed
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
 
