Update go.yml to run vet and lint

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,8 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+
+    - name: Vet and Lint
+      run: |
+        go vet .
+        golint .
