Added gofmt to go.yml

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,10 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+      
+    - name: Format
+      run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
+      if: matrix.os == 'ubuntu-latest'
 
     - name: Vet
       run: go vet ./...
