--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go build -v ./...
       
     - name: Format
-      run: if [ "$(gofmt -s -l ./... | wc -l)" -gt 0 ]; then exit 1; fi
+      run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
 
     - name: Vet
       run: go vet ./...
