Update workflow to include pr

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -2,10 +2,11 @@ name: golangci-lint
 on:
   push:
     branches:
-      - master
       - main
       - feature-golangci
   pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
