Replaced empty hash test with hash already on VT. Added ScanOutputDir config var.

--- a/docs/config.json.example
+++ b/docs/config.json.example
@@ -3,5 +3,6 @@
     "UploadLimitMB" : 512,
     "UseVirusTotal" : true,
     "UploadVirusTotal" : true,
-    "VirusTotalApiKey" : "lol"
+    "VirusTotalApiKey" : "lol",
+    "ScanOutputDir" : "scans/"
 }
