Server now saves upload log.

--- a/docs/config.json.example
+++ b/docs/config.json.example
@@ -4,5 +4,6 @@
     "UseVirusTotal" : true,
     "UploadVirusTotal" : true,
     "VirusTotalApiKey" : "lol",
-    "ScanOutputDir" : "scans/"
+    "ScanOutputDir" : "scans/",
+    "UploadLog" : "uploads.json"
 }
