--- a/docs/config.json.example
+++ b/docs/config.json.example
@@ -5,5 +5,6 @@
     "UploadVirusTotal" : true,
     "VirusTotalApiKey" : "lol",
     "ScanOutputDir" : "scans/",
+    "UploadsDir" : "uploads/",
     "UploadLog" : "uploads.json"
 }
