--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,3 +29,9 @@ jobs:
 
     - name: Vet
       run: go vet ./...
+      
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      
