--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
       
