Added run coverage to go workflow
Run coverage in Go workflow for codecov.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Vet
       run: go vet ./...
       
+    - name: Run coverage
+      run: go test -race -coverprofile=coverage.out -covermode=atomic
+      
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
