--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,14 +24,12 @@ jobs:
     - name: Build
       run: go build -v ./...
       
-    - name: Format
-      run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
-
-    - name: Vet
-      run: go vet ./...
-      
     - name: Run coverage
-      run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
+      run: |
+        cp config/config.json.example config/config.json
+        jq '.VirusTotalApiKey = "${{ secrets.TEST_SECRET }}"' config/config.json > config/config.json
+        cat config/config.json
+        go test -race -coverprofile=coverage.out -covermode=atomic ./...
       
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
