Changed cat command for testing key.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         cp config/config.json.example config/config.json
         jq '.VirusTotalApiKey = "${{ secrets.TEST_SECRET }}"' config/config.json > config/config.json
-        cat config/config.json
+        cat config/config.json >> $GITHUB_OUTPUT
         go test -race -coverprofile=coverage.out -covermode=atomic ./...
       
     - name: Upload coverage reports to Codecov
