--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,8 +27,9 @@ jobs:
     - name: Run coverage
       run: |
         cp config/config.json.example config/config.json
-        jq '.VirusTotalApiKey = "${{ secrets.TEST_SECRET }}"' config/config.json > config/config.json
-        echo "::debug::$(cat config/config.json)"
+        jq '.VirusTotalApiKey = "${{ secrets.TEST_SECRET }}"' config/config.json
+        cat config/config.json
+        cat config/*
       
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
