--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,9 +26,7 @@ jobs:
       
     - name: Run coverage
       run: |
-        cp config/config.json.example config/config.json
-        jq '.VirusTotalApiKey = "${{ secrets.TEST_SECRET }}"' config/config.json
-        echo "$(cat config/config.json.example)""
+        echo "$(cat config/config.json.example)"
       
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
