--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,8 @@ jobs:
       
     - name: Run coverage
       run: |
-        echo "$(cat config/config.json.example)"
+        cp config/config.json.example config/config.json
+        echo "$(cat config/config.json)"
       
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
