--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,9 @@ jobs:
     - name: Run coverage
       run: |
         cp config/config.json.example config/config.json
-        jq '.VirusTotalApiKey = "${{ secrets.VIRUS_TOTAL_API_KEY }}"' config/config.json > config/config.json
+        jq '.VirusTotalApiKey = "VT KEY"' config/config.json > config/config.json
+        jq '.UploadWebHooks = ""' config/config.json > config/config.json
+        echo "$(cat config/config.json)"
         go test -race -coverprofile=coverage.out -covermode=atomic ./...
       
     - name: Upload coverage reports to Codecov
