--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,8 @@ jobs:
     - name: Run coverage
       run: |
         cp config/config.json.example config/config.json
+        echo "$(cat config/config.json)
+        echo "$( jq '.VirusTotalApiKey = "VT KEY"' config/config.json)"
         jq '.VirusTotalApiKey = "VT KEY"' config/config.json > config/config.json
         jq '.UploadWebHooks = ""' config/config.json > config/config.json
         echo "$(cat config/config.json)"
