--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,15 +20,12 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
-
-    - name: Build
-      run: go build -v ./...
       
     - name: Run coverage
       run: |
         cp config/config.json.example config/config.json
         echo "$(cat config/config.json)
-        echo "$( jq '.VirusTotalApiKey = "VT KEY"' config/config.json)"
+        echo "$( jq '.VirusTotalApiKey = \"VT KEY\"' config/config.json)"
         jq '.VirusTotalApiKey = "VT KEY"' config/config.json > config/config.json
         jq '.UploadWebHooks = ""' config/config.json > config/config.json
         echo "$(cat config/config.json)"
