--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,7 @@ jobs:
       
     - name: Run coverage
       run: |
+        echo $PWD
         cp config/config.json.example config/config.json
         jq '.VirusTotalApiKey = "{{ secrets.VIRUS_TOTAL_API_KEY }}"' config/config.json > config/config.json
         go test -race -coverprofile=coverage.out -covermode=atomic ./...
