--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    defaults:
+      shell: bash
+
     steps:
     - uses: actions/checkout@v3
 
@@ -20,6 +23,9 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
+    
+    - name: Build
+      run: go build -v ./...
       
     - name: Run coverage
       run: |
