--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,17 @@ jobs:
     
     - name: Build
       run: go build -v ./...
+  
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20.5'
+      - name: Checkout Source 
+        uses: actions/checkout@v3
+      - uses: actions/cache@v3
       
     - name: Run coverage
       run: |
