--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,12 +32,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Setup go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.20.5'
-      - name: Checkout Source 
-        uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      uses: actions/setup-go@v4
+      with:
+        go-version: 1.19
+        
+    - name: Checkout Source 
+      uses: actions/checkout@v3
       
     - name: Run coverage
       run: |
