--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Create Config file with Secret
       run: |
         cp config/config.json.example config/config.json
-        jq '.VirusTotalApiKey = "{{ secrets.TEST_SECRET }}"' config/config.json > config/config.json
+        jq '.VirusTotalApiKey = "TESTAPI"' config/config.json > config/config.json
 
     - name: Get config path
       run: | 
