--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,7 +43,9 @@ jobs:
       run: |
         cp config/config.json.example config/config.json
         jq '.VirusTotalApiKey = "TESTAPI"' config/config.json > config/config.json
-        echo "$(cat config/config.json)"
+
+    - name: Cat file
+      run: cat config/config.json
 
     - name: Get config path
       run: | 
