Fixed missing colon.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,7 +45,7 @@ jobs:
         jq '.VirusTotalApiKey = "TESTAPI"' config/config.json > config/config.json
 
     - name: Cat old file
-      run cat config/config.json.example
+      run: cat config/config.json.example
 
     - name: Cat new file
       run: cat config/config.json
