--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Create Config file with Secret
-      run: cp config/config.json.example config/config.json
+      run: jq '.VirusTotalApiKey = "TESTAPI"' config/config.json.example > config/config.json
 
     - name: Cat old file
       run: cat config/config.json.example
