--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Create Config file with Secret
-      run: jq '.VirusTotalApiKey = "{{ secrets.VIRUS_TOTAL_API_KEY }}"' config/config.json.example > config/config.json
+      run: jq --arg secret "${{ secrets.VIRUS_TOTAL_API_KEY }}" '.VirusTotalApiKey = $secret' config/config.json.example > config/config.json
 
     - name: Get config path
       run: | 
